--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ BD_URL="jdbc:oracle:thin:@(description= (retry_count=20)(retry_delay=3)(address=
 BD_USERNAME=ADMIN"
 BD_PASSWORD="FinalBossB2025"
 BD_DRIVER="oracle.jdbc.OracleDriver"
+
+SERVER_PORT="8080"
